force-app/main/default/objects/Supplier__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Full address of the supplier&apos;s primary office or registered location.</description>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>