force-app/main/default/objects/Supplier__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <description>To track agreement, end date</description>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>