force-app/main/default/objects/Supplier__c/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To track whether the supplier has signed an Contract</description>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>