force-app/main/default/objects/Supplier__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <description>To track from when agreement is started</description>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>