force-app/main/default/objects/Supplier__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Secondary contact number for the supplier or backup contact.</description>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>