force-app/main/default/objects/Supplier__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Full name of the primary contact person at the supplier organization.</description>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>