force-app/main/default/objects/Supplier__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Primary phone number of the supplier’s contact person.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>