force-app/main/default/objects/Supplier__c/fields/Last_supplied_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_supplied_Date__c</fullName>
    <description>The most recent date a candidate/resource was submitted or placed via this supplier.</description>
    <label>Last supplied Date</label>
    <type>Date</type>
</CustomField>