force-app/main/default/objects/Supplier__c/fields/Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources__c</fullName>
    <description>Total number of candidates or resources provided by the supplier so far.</description>
    <label>Number of Resources</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>