force-app/main/default/objects/Supplier__c/fields/Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Days__c</fullName>
    <description>Number of days agreed upon for payment settlement after invoice submission.</description>
    <inlineHelpText>Enter the number of days agreed upon with the supplier for payment settlement after the invoice has been submitted.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>