force-app/main/default/objects/Supplier__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>