force-app/main/default/objects/Supplier__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Staffing</fullName>
            </value>
            <value>
                <fullName>Contract Staffing</fullName>
            </value>
            <value>
                <fullName>Executive Search</fullName>
            </value>
            <value>
                <fullName>IT Staffing</fullName>
            </value>
            <value>
                <fullName>Non-IT Staffing</fullName>
            </value>
            <value>
                <fullName>Bulk Hiring / RPO</fullName>
            </value>
            <value>
                <fullName>International Hiring</fullName>
            </value>
            <value>
                <fullName>Freelancer / Gig Talent</fullName>
            </value>
            <value>
                <fullName>Campus Hiring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>