force-app/main/default/objects/Supplier__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Categorizes the supplier (e.g., Freelancer, Agency, Consulting Partner, etc.). Helps in filtering and evaluating vendors.</description>
    <label>Supplier Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Staffing_Agency</fullName>
                <label>Staffing Agency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>