force-app/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Last_supplied_Date__c</columns>
    <columns>Success_Rate__c</columns>
    <columns>Number_of_Resources__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>